refactor: Refactor HistoryGrouping to use segment-based grouping